# z-zoidberg

./: .git-msg.txt  .gitignore  AGENTS.md  AGENT_QUICKSTART.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  Makefile  PLAN-EXTENSIONS.md  README.md  SOUL.md  TODO.md  TOOLS.md  USER.md  bootstrap.md  deep-research-execution-v3.md  deep-research-prompt.md  entities.json  gap-analysis.md  index.html  ingestion_report.txt  malware_ingestion_report.txt  offensive-repo-catalogue.yaml  prompt.md  quickstart.md  status.html  zje-api-reference.md
security-knowledge/: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  DEPLOY.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  enrichment-policy.yaml  mcp-tool-manifest.json  pyproject.toml  source-policy.yaml  taxii-collections.yaml
security-knowledge/alembic/: env.py
security-knowledge/app/: browser_pool.py  config.py  database.py  fetcher.py  fingerprint.py  main.py  worker.py
security-knowledge/docs/: api_reference.md  architecture.md  auth.md  cli.md  deployment.md  detections.md  digests.md  enrichment.md  getting_started.md  graph.md  graphql.md  mitre_attack.md  operations.md  stix_export.md  webhooks.md  worker.md
security-knowledge/ops/: README.md  grafana_dashboard.json  prometheus_alerts.yaml  security-knowledge-worker.service  security-knowledge.service  zje-sk-proxy.conf
security-knowledge/scripts/: backfill_embeddings.py  backfill_enrichment.py  backfill_kg_entities.py  backfill_onion_payments.py  dedup.py  dedup_entities.py  dump_db.sh  enrich_backfill.py  enrichment_pipeline.py  export_db.sh  feed-poller.sh  feed_ioc_extractor.py  import_advisories.py  import_apt_encyclopedia.py  import_cvelist.py  import_exploitdb.py  import_gcve.py  import_loldrivers.py  import_misp_galaxies.py  import_sysmon.py  import_yara.py  ingest_cql.py  ingest_files.py  ingest_malware.py  ingest_tir.py  install.sh  inter_knowledge_enrichment.py  manual_ingest_one.py  onion_scraper.py  onion_sites.json  refresh_corpora.sh  research_dlls.py  research_onions.py  research_remaining.py  research_sources.py  research_tools.py  seed_claims.py  seed_knowledge.py  seed_mitre_groups.py  seed_threat_intel.py  (+7 more)
security-knowledge/seed/: __init__.py  create_zoidberg.py  (+5 more)
(+423 files in other folders)
