[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "security-knowledge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "arq>=0.25.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "markdown>=3.6",
    "tiktoken>=0.7.0",
    "stix2>=3.0.1",
    "taxii2-client>=2.3.0",
    "strawberry-graphql[fastapi]>=0.228.0",
    "jinja2>=3.1.4",
    "aiofiles>=23.2.1",
    "apscheduler>=3.10.4",
    "pymisp>=2.4.190",
    "cryptography>=42.0.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "starlette>=0.37.0",
    "mitreattack-python>=3.1.0",
    "playwright>=1.44.0",
    "crowdstrike-falconpy>=1.4.0",
    "mcp>=1.0.0",
    "httpx[socks]>=0.27.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "respx>=0.21.0",
    "fakeredis[aioredis]>=2.23.0",
    "types-passlib>=1.7.7",
    "types-aiofiles>=23.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501 (line too long) is impractical to enforce in model/migration files
# that contain long SQL expressions, URLs, and type annotations.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
